@@ -36,7 +36,7 @@
             <dependency>
                 <groupId>org.apache.deltaspike.distribution</groupId>
                 <artifactId>distributions-bom</artifactId>
-                <version>${version.deltaspike-1.7}</version>
+                <version>${version.deltaspike-1.9}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -126,13 +126,12 @@
         <dependency>
             <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
-            <version>${version.jaxb}</version>
-            <scope>provided</scope>
+            <version>${version.jaxb-api}</version>
         </dependency>
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
             <artifactId>jaxb-core</artifactId>
-            <version>${version.jaxb}</version>
+            <version>${version.jaxb-core}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -219,4 +218,31 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>post-10-unsafe-code-non-mac</id>
+            <activation>
+                <jdk>[11,)</jdk>
+                <file>
+                    <exists>${jdk8.home}${file.separator}jre${file.separator}lib${file.separator}rt.jar</exists>
+                </file>
+            </activation>
+            <properties>
+                <surefire.jvm.params>--add-opens java.base/java.lang=ALL-UNNAMED</surefire.jvm.params>
+            </properties>
+        </profile>
+        <profile>
+            <id>post-10-unsafe-code-mac</id>
+            <activation>
+                <jdk>[11,)</jdk>
+                <file>
+                    <exists>${jdk8.home}${file.separator}jre${file.separator}lib${file.separator}classes.jar</exists>
+                </file>
+            </activation>
+            <properties>
+                <surefire.jvm.params>--add-opens java.base/java.lang=ALL-UNNAMED</surefire.jvm.params>
+            </properties>
+        </profile>
+    </profiles>
 </project>
